# challenge-backend

./: alembic.ini  docker-compose.yaml  main.py  pyproject.toml
api/config/: config_db.py  settings.py
api/models/: auth.py  dals.py  manager.py  user.py
api/routers/: user_routers.py
api/shemas/: user_shems.py
app/: main.py
app/config/: config_db.py  settings.py
app/models/: crud.py
app/routers/: user_routers.py
app/shemas/: user_shems.py
migrations/versions/: 1a91eed2712b_init.py
tests/: alembic.ini  conftest.py
tests/migrations/: env.py
tests/migrations/versions/: 311464f7ec5b_test.py  4c5d1f09ce2d_test.py
